Add virtual threads for getting repositories branches